--- a/app/views/home/index2.html.erb
+++ b/app/views/home/index2.html.erb
@@ -424,6 +424,19 @@
   $(function() {
     $('#current_location').click(function() {
       secondCall(pos, 14);
+      $('#near_list').hide();
+      $('#lab_list').hide();
+    });
+  });
+</script>
+
+<script>
+  $(function() {
+    $('#route_find').click(function() {
+      $('#detail').show('blind', 600);
+    });
+    $('#route_delete').click(function() {
+      $('#detail').hide('blind', 600);
     });
   });
 </script>
@@ -575,9 +588,9 @@
             <label for="end">도착지</label>
             <input type="text" id="end" placeholder="마커 오른쪽 클릭" style="color:black;"><br><br>
             <input type="hidden" id="hidden_end" name="hidden_end">
-            <span onclick="calcRoute()" style="cursor:pointer;">길찾기!</span>&nbsp;&nbsp;&nbsp;
-            <span onclick="deleteRoute()" style="cursor:pointer;">지우기</span><br><br>
-            <p id="detail" style="cursor:pointer;">자세히 보기</p>
+            <span id="route_find" onclick="calcRoute()" style="cursor:pointer;">길찾기!</span>&nbsp;&nbsp;&nbsp;
+            <span id="route_delete" onclick="deleteRoute()" style="cursor:pointer;">지우기</span><br><br>
+            <p id="detail" style="cursor:pointer; display:none;">자세히 보기</p>
             <input type="hidden" id="pos_lat" name="pos_lat">
             <input type="hidden" id="pos_lng" name="pos_lng">
           </div>
