--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -62,6 +62,66 @@ $('[data-toggle=collapse]').click(function(){
         <%@rank+=1%>
         <%end%>
       </div><br><br>
+      
+      <!--전체글 부분-->
+      <div class="panel panel-default">
+        <table class="table table-striped table-condensed">
+            <col style="width:10%">
+            <col style="width:20%">
+            <col style="width:40%">
+            <col style="width:10%">
+            <col style="width:10%">
+            <col style="width:10%">
+          <thead>
+            <tr>
+              <th style="text-align:center">번호</th>
+              <th style="text-align:center">고사장</th>
+              <th style="text-align:center">제목</th>
+              <th style="text-align:center">작성자</th>
+              <th style="text-align:center">평점</th>
+              <th style="text-align:center">추천수</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @posts.reverse.each do |x|%>
+            <tr data-toggle="modal" data-target="#<%=x.id%>">
+                <td style="text-align:center;cursor:pointer"><%=x.id%></td>
+                <td style="text-align:center;cursor:pointer"><%=x.testcenter%></td>
+                <td style="text-align:center"><%=x.title%></td>
+                <td style="text-align:center">김새봄</td>
+                <td style="text-align:center"><%=x.avg_point%></td>
+                <td style="text-align:center">12</td>
+            </tr>
+            
+            <div class="modal fade" id="<%=x.id%>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <br><br>
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel"><%=x.title%></h4><a>평점,조회수,추천수,작성시간 등등 </a>
+                  </div>
+                  <div class="modal-body">
+                    <%=x.content%>
+                    <form action="" method="POST" class="form-inline">
+                      <input type="text" class="form-control" style="width:90%" placeholder="댓글달기">
+                    <input type="submit" value="댓글달기">
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <%end%>
+            
+          </tbody>
+        </table>
+      </div>
+      <div style="text-align:center">
+        <%= will_paginate @posts, renderer: BootstrapPagination::Rails, previous_label: "이전 글", next_label: "최근 글", inner_window: 1, outer_window: 0 %>
+      </div>
     </div>
   <div class="col-md-2">
       
@@ -77,8 +137,6 @@ $('[data-toggle=collapse]').click(function(){
       </div>
       <%end%>
   </div>
-
-
 <!--각 학교별 페이지인경우-->
 <%else%>
 <script>
@@ -134,6 +192,7 @@ $('[data-toggle=collapse]').click(function(){
   <div class="col-md-6">
     <div class="row">
       <div class="col-md-8">
+        <h1><%=@testcenter.find(params[:id]).name%></h1>
         <div id="map" style="width:400px; height:300px;"></div>
       
       </div>
@@ -157,7 +216,7 @@ $('[data-toggle=collapse]').click(function(){
         <%end%> 
       <%end%>
     </div>
-    <p><%=@testcenter.find(params[:id]).name%>게시판입니다</p>
+    
     <div class="panel panel-default">
         <!-- Table -->
         <table class="table table-striped table-condensed">
