--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -43,7 +43,7 @@ $('[data-toggle=collapse]').click(function(){
             <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#<%=region_code%>"><%=region_name%> <i class="glyphicon glyphicon-chevron-right"></i></a>
                 <!--in은 페이지가 열렸을때 펼쳐졌는지 여부-->
                 <ul class="nav nav-stacked collapse <%if params[:id] != nil && (@testcenter.where(:region_code=>region_code).include? @testcenter.find(params[:id])) %>in<%end%>" id="<%=region_code%>">
-                  <%@testcenter.where(:region_code=>region_code).each do |x|%>
+                  <%@testcenter.where(:region_code=>region_code).sort_by{|x| x[:name]}.each do |x|%>
                     <li role="presentation"><a href="/home/labreview/<%=x.id%>" style="padding-left:40px"><%=x.name%></a></li>
                   <%end%>
                 </ul>
@@ -93,6 +93,7 @@ $('[data-toggle=collapse]').click(function(){
               <th style="text-align:center">제목</th>
               <th style="text-align:center">작성자</th>
               <th style="text-align:center">평점</th>
+              <th style="text-align:center">좋아요</th>
               <th style="text-align:center">작성날짜</th>
             </tr>
           </thead>
@@ -104,6 +105,7 @@ $('[data-toggle=collapse]').click(function(){
                 <td style="text-align:center"><%=x.title%></td>
                 <td style="text-align:center"><%=x.author%></td>
                 <td style="text-align:center"><%=x.avg_point%></td>
+                <td style="text-align:center"><%=x.likes.count%></td>
                 <td style="text-align:center"><%=x.created_at.in_time_zone("Seoul") %></td>
             </tr>
             
@@ -134,7 +136,7 @@ $('[data-toggle=collapse]').click(function(){
                     <div>
                       <p>총평</p>
                       <p><%=x.content%></p>
-                      
+                      <p><%=x.computer_point%></p>
                     </div>
                     <div>
                       <p>댓글부분</p>
@@ -143,9 +145,13 @@ $('[data-toggle=collapse]').click(function(){
                       <%end%>
                     </div>
                     <form action="/home/do_write_reply" method="POST" class="form-inline">
-                      <input type="text" name="article_id" value="<%=x.id%>">
+                      <input type="hidden" name="article_id" value="<%=x.id%>">
                       <input type="text" name="reply_content" class="form-control" style="width:90%" placeholder="댓글달기">
                     <input type="submit" value="댓글달기">
+                    </form>
+                    <form action="/home/do_like" method="POST">
+                        <input type="hidden" name="article_id" value="<%=x.id%>">
+                        <input type="submit" value="좋아요!">
                     </form>
                   </div>
                   <div class="modal-footer">
@@ -177,6 +183,10 @@ $('[data-toggle=collapse]').click(function(){
       </div>
       <%end%>
   </div>
+  
+  
+  
+  
 <!--각 학교별 페이지인경우-->
 <%else%>
 <script>
@@ -298,11 +308,30 @@ $('[data-toggle=collapse]').click(function(){
                     <h4 class="modal-title" id="myModalLabel"><%=x.title%></h4><a>평점,조회수,추천수,작성시간 등등 </a>
                   </div>
                   <div class="modal-body">
-                    <%=x.content%>
+                    <div>
+                      <p>위치평가</p>
+                      <p><%=x.location_content%></p>
+                      <p><%=x.location_point%></p>
+                    </div>
+                    <div>
+                      <p>시설평가</p>
+                      <p><%=x.facility_content%></p>
+                      <p><%=x.facility_point%></p>
+                    </div>
+                    <div>
+                      <p>컴퓨터 평가</p>
+                      <p><%=x.computer_content%></p>
+                      <p><%=x.computer_point%></p>
+                    </div>
+                    <div>
+                      <p>총평</p>
+                      <p><%=x.content%></p>
+                      <p><%=x.computer_point%></p>
+                    </div>
                     <div>
                       <p>댓글부분</p>
                       <%x.replies.each do |y|%>
-                        <p><%=y.content%>
+                        <%=y.content%>
                       <%end%>
                     </div>
                     <form action="" method="POST" class="form-inline">
