--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -122,7 +122,7 @@
       </div>
       <div id="over_convert2">
         <div class="convert3" id="convert3">
-          <a href="/home/test_bar" style="text-decoration:none; color:black;">
+          <a href="/community/main" style="text-decoration:none; color:black;">
             <div class="nav_icon_review" id="review_menu">
               <img src="https://cdn0.iconfinder.com/data/icons/layout-and-location/24/Untitled-2-21-24.png">
               <p style="padding-top: 5px; font-size:12px;"><b>COMMUNITY</b></p>
