--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -1,52 +1,37 @@
 <%region={"01"=>"서울/경기","02"=>"인천","03"=>"충청도","04"=>"경상도","05"=>"전라도","06"=>"강원도","07"=>"제주도"}%>
 <script>
 $(".alert").addClass("in").fadeOut(4500);
+
 /* swap open/close side menu icons */
 $('[data-toggle=collapse]').click(function(){
   	// toggle icon
   	$(this).find("i").toggleClass("glyphicon-chevron-down");
 }); 
 </script>
+
 <script>
   $(function() {
-    document.getElementById('over_convert').innerHTML='<a href="/home/labreview" style="text-decoration:none;color:black;">'
-                                                     +'<div class="convert2" id="convert2"'
-                                                     +'style="box-shadow: inset 0px 0px 10px #8C8C8C;">'
-                                                     +'<div class="nav_icon_review" id="review_menu"'
-                                                     +'style="cursor:pointer;">'
-                                                     +'<img src="https://cdn0.iconfinder.com/data/icons/layout-and-location/24/Untitled-2-21-24.png">'
-                                                     +'<p style="padding-top: 5px; font-size:12px;"><b>REVIEW</b></p></div></div></a>'
+    document.getElementById('over_convert').innerHTML='<a href="/home/labreview" style="text-decoration:none; color:black;"><div class="convert2" id="convert2" style="box-shadow: inset 0px 0px 10px #8C8C8C;"><div class="nav_icon_review" id="review_menu" style="cursor:pointer;"><img src="https://cdn0.iconfinder.com/data/icons/layout-and-location/24/Untitled-2-21-24.png"><p style="padding-top: 5px; font-size:12px;"><b>REVIEW</b></p></div></div></a>'
     
-    // 댓글달아도 모달 유지
-  // $( "form" ).submit(function( event ) {
-  //     event.preventDefault();
-  //   });
-  // $('.modal').on('hidden.bs.modal', function() {
-  //     return false;
-  //   });
-  // $('#mymodal').on('hidden.bs.modal', function() {
-  //     this.modal('show');
-  //   });
+ 
   });
   
 </script>
+
 <div class="review_drawer" id="review_drawer">
+
 </div>
+
 <script>
 </script>
+
 <br><br>
 <div class="row" style="padding-top:20px;">
   <div class="col-md-2 col-md-offset-1" style="border-right: 1px solid #BDBDBD;">
       <ul class="nav nav-stacked" id="list_deco">
           <li role="nav-header"><a href="/home/labreview"><b>시험장 전체보기</b></a></li>
           <%region.each do |region_code,region_name|%>
-            <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#<%=region_code%>"><%=region_name%> <i class="glyphicon glyphicon-chevron-right"></i></a>
-                <!--in은 페이지가 열렸을때 펼쳐졌는지 여부-->
-                <ul class="nav nav-stacked collapse <%if params[:id] != nil && (@testcenter.where(:region_code=>region_code).include? @testcenter.find(params[:id])) %>in<%end%>" id="<%=region_code%>">
-                  <%@testcenter.where(:region_code=>region_code).sort_by{|x| x[:name]}.each do |x|%>
-                    <li role="presentation"><a href="/home/labreview/<%=x.id%>" style="padding-left:40px"><%=x.name%></a></li>
-                  <%end%>
-                </ul>
+            <li class="nav-header"> <a href="/home/region_main/<%=region_code%>"><%=region_name%> <i class="glyphicon glyphicon-chevron-right"></i></a>
             </li>
           <%end%>
       </ul>
@@ -98,31 +83,138 @@ $('[data-toggle=collapse]').click(function(){
   
 <!--각 학교별 페이지인경우-->
 <%else%>
-  <div class="col-md-6">     
-        <%region.each do |region_code,region_name| %>
-          <%if @testcenter.where(:region_code=>region_code).include? @testcenter.find(params[:id]) %>
-            <h4><%=region_name%> 핫 플레이스</h4><br>
-            <%@ranking=1%>
-            <div class="row"> 
-            <%@testcenter.where(:region_code => region_code).sort_by{|x| x[:avg_point]}.reverse.take(3).each do |y|%>
-              <div class="col-md-4">
-                <a href="/home/labreview/<%y.id%>" style="text-decoration:none; color:black;">
-                  <div style="border:1px solid black; height:120px">
-                    <div>
-                      <h4><%=@ranking%>위</h4>
-                      <p><%=y.name%></p>
-                      <p>평점:<%=y.avg_point%></p>
-                    </div>
+<script>
+  var center = new google.maps.LatLng(<%=@testcenter.find(params[:id]).position_lat%>, <%=@testcenter.find(params[:id]).position_lng%>);
+  var mapProp;
+  var marker;
+  
+  function labMap() {
+    mapProp = {
+      center: center,
+      zoom: 16,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+    map = new google.maps.Map(document.getElementById('map'), mapProp);
+    pinmarker();
+    addinfo(marker);
+  }
+  
+  function pinmarker() {
+    marker = new google.maps.Marker({
+      map: map,
+      position: center,
+      title: '<%=@testcenter.find(params[:id]).name%>',
+      address: '<%=@testcenter.find(params[:id]).address%>',
+      animation: google.maps.Animation.DROP
+    });
+  }
+  
+  function addinfo(marker) {
+    var info = new google.maps.InfoWindow({
+      content: '<h4><%= @testcenter.find(params[:id]).name %></h4>'
+              +'<p><%= @testcenter.find(params[:id]).address %></p>'
+              +'<p id="detail" style="cursor:pointer; color:#6799FF;" onclick="newWindow()">Google 지도 보기</p>',
+      maxWidth: 200
+      });
+    map.addListener('idle', function() {
+      info.open(marker.get('map'), marker);
+    });
+    marker.addListener('mouseover', function() {
+      info.open(marker.get('map'), marker);
+    });
+  }
+  
+  function newWindow() {
+    var win = window.open('https://www.google.co.kr/maps/place/'
+                          +'<%=@testcenter.find(params[:id]).address%>'
+                          +'/@'
+                          +'<%=@testcenter.find(params[:id]).position_lat%>'
+                          +','
+                          +'<%=@testcenter.find(params[:id]).position_lng%>'
+                          +',17z?hl=ko');
+    win.focus();
+  }
+  
+  google.maps.event.addDomListener(window, 'load', labMap);
+</script>
+  <div class="col-md-6">
+    <div class="row">
+      <div class="col-md-8">
+        <h2><%=@testcenter.find(params[:id]).name%></h2>
+        <div id="map" style="width:400px; height:300px;"></div>
+      
+      </div>
+      <%region.each do |region_code,region_name| %>
+        <%if @testcenter.where(:region_code=>region_code).include? @testcenter.find(params[:id]) %>
+            <div class="col-md-4">
+              <p><%=region_name%> 핫 플레이스</p>
+              <%@ranking=1%>
+              <%@testcenter.where(:region_code => region_code).sort_by{|x| x[:avg_point]}.reverse.take(3).each do |y|%>
+              <a href="/home/labreview/<%y.id%>" style="text-decoration:none; color:black;">
+                <div style="border:1px solid black;height:120px">
+                  <div>
+                    <h4><%=@ranking%>위</h4>
+                    <p><%=y.name%></p>
+                    <p>평점:<%=y.avg_point%></p>
                   </div>
-                </a>
-                <%@ranking+=1%>
-              </div>   
-            <%end%>
+                </div>
+              </a>
+              <%@ranking+=1%>
+              <%end%>
             </div>
-          <%end%> 
-        <%end%>
-  </div>
+        <%end%> 
+      <%end%>
+    </div>
     
-   
- </div>
+    <div class="panel panel-default">
+        <!-- Table -->
+        <table class="table table-striped table-condensed">
+            <col style="width:10%">
+            <col style="width:20%">
+            <col style="width:40%">
+            <col style="width:10%">
+            <col style="width:10%">
+            <col style="width:10%">
+          <thead>
+            <tr>
+              <th style="text-align:center">번호</th>
+              <th style="text-align:center">고사장</th>
+              <th style="text-align:center">제목</th>
+              <th style="text-align:center">작성자</th>
+              <th style="text-align:center">평점</th>
+              <th style="text-align:center">추천수</th>
+            </tr>
+          </thead>
+          
+          <!--테이블 row 클릭 이벤트-->
+          <script>
+            $(document).ready(function($) {
+            $(".clickable-row").click(function() {
+                window.document.location = $(this).data("href");
+            });
+          });
+          </script>
+          <!--테이블 row 클릭 이벤트 끝-->
+          
+          <tbody>
+            <% @testcenter.find(params[:id]).articles.reverse.each do |x|%>
+            <tr style="cursor:pointer" class='clickable-row' data-href='/home/show_review/<%=x.id%>'>
+                <td style="text-align:center;"><%=x.id%></td>
+                <td style="text-align:center;"><%=x.testcenter%></td>
+                <td style="text-align:center"><%=x.title%></td>
+                <td style="text-align:center"><%=x.author%></td>
+                <td style="text-align:center"><%=x.avg_point%></td>
+                <td style="text-align:center"><%=x.likes.count%></td>
+            </tr>
+            <%end%>
+            
+          </tbody>
+        </table>
+      </div>
+      <form action="/home/labreview_write/<%=@testcenter.find(params[:id]).id%>">
+          <button type="submit" class="btn btn-primary">후기 작성</button>
+      </form>
+  </div>
+ 
+</div>
 <%end%>
