--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -76,6 +76,16 @@ html, body {
 	height: 25px;
 }
 
+.smaller {
+  width: 100px;
+  height: 20px;
+}
+
+.smallest {
+  width: 75px;
+  height: 15px;
+}
+
 .on {
 	opacity: 1 !important;
 }
