--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -103,7 +103,7 @@
                     +'<span class="star-rating small">'
                     +star[i]
                     +'</span>&nbsp;'
-                    +'<span stype="font-size:13px;">&nbsp;'+lab_data[i][4]+' 점</span>'
+                    +'<span style="font-size:13px;">&nbsp;'+lab_data[i][4]+' 점</span>'
                     +'&nbsp;&nbsp;<a href="/home/labreview/'+lab_data[i][3]+'">자세히 보기</a><br>'
                     +'<a style="padding-top:5px;">'
                     +'</a>');
