--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,4 @@
-<div style="text-align:center">
-  <p style="font-family:sans-serif; font-size:20px">회원가입</p>
+<div style="text-align:center; margin-top: 60px;">
 </div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signin"},multipart: true) do |f| %>
   <%= devise_error_messages! %>
