--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -26,60 +26,113 @@ $('[data-toggle=collapse]').click(function(){
 </script>
 
 <br><br>
-<div class="row" style="padding-top:20px;">
-  <div class="col-md-2 col-md-offset-1" style="border-right: 1px solid #BDBDBD;">
+<div class="row" style="padding-top:40px;">
+  <div class="col-md-2 col-md-offset-1" style="border-right: 1px solid #BDBDBD; height:1000px">
       <ul class="nav nav-stacked" id="list_deco">
-          <li role="nav-header"><a href="/home/labreview"><b>시험장 전체보기</b></a></li>
+          <li role="nav-header"><a href="/home/labreview"><b style="font-size:20px">시험장 전체보기</b></a></li>
+          <br><br>
           <%region.each do |region_code,region_name|%>
-            <li class="nav-header"> <a href="/home/region_main/<%=region_code%>"><%=region_name%> <i class="glyphicon glyphicon-chevron-right"></i></a>
+            <li class="nav-header"> <a href="/home/region_main/<%=region_code%>" style="font-size:15px"><%=region_name%> <i class="glyphicon glyphicon-chevron-right"></i></a>
             </li>
+             <hr>
           <%end%>
       </ul>
       <hr>  
   </div>
   <!--메인페이지인 경우-->
   <%if params[:id].nil?%>
-    <div class="col-md-7">
-      <p>전국 핫플레이스 TOP12</p>
-      <form action="/home/labreview_write">
-        <button type="submit" class="btn btn-default">후기 작성</button>
-      </form>
-      <div class="row" style="border-bottom: 1px solid #BDBDBD">
+    <br>
+    <div class="col-md-8" style="margin-left: 20px;">
+      
+      <div style="text-align:center">
+        <form action="/home/labreview_write">
+          <button type="submit" class="btn btn btn-default btn-lg btn-block">후기 작성</button>
+        </form>
+      </div>
+    `<br>
+      <h3>전국 핫플레이스 TOP8</h3>
+      <div class="row">
         <%@rank=1%>
-        <%@testcenter.sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
-        <div class="col-md-3" style="margin-bottom:20px">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h4><%=@rank%>위</h4>
-              <p><%=y.name%></p>
-              <p>평점:<%=y.avg_point%></p>
-              <a href="/home/labreview/<%=y.id%>">바로가기</a>
+        <%@testcenter.sort_by{|x| x[:avg_point]}.reverse.take(8).each do |y|%>
+        <div class="col-md-6">
+         <a href="/home/labreview/<%=y.id%>" style="color:black; text-decoration:none;">
+          <div id="link" class="thumbnail" style="height:200px;">
+            <div class="row">
+              <div class="col-md-7">
+                <div style="border-right:1px solid #BDBDBD; text-align:center">
+                  <p><strong><%=@rank%>위  <%=y.name%></strong></p>
+                  <!--<p><%=y.address%></p>-->
+                  <iframe width="98%" height="100%" frameborder="0" style="border:0"
+                          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDxbMZWBxFjGnTiZOMAeSIm6TFR4BvhFUM&q=<%=y.position_lat%>,<%=y.position_lng%>"
+                          >
+                  </iframe>
+                  
+                </div>
+              </div>
+              <div class="col-md-5" style="margin-left: -20px;">
+                <p>위치&nbsp;
+                <span class="star-rating smaller">
+                  <% for x in (1..5) do %>
+                    <% if (x == y.location_point.round(0)) %>
+                      <i class="on"></i>
+                    <% else %>
+                      <i></i>
+                    <% end %>
+                  <% end %>
+                </span></p>
+                <p>시설&nbsp;
+                <span class="star-rating smaller">
+                  <% for x in (1..5) do %>
+                    <% if (x == y.facility_point.round(0)) %>
+                      <i class="on"></i>
+                    <% else %>
+                      <i></i>
+                    <% end %>
+                  <% end %>
+                </span></p>
+                <p>컴퓨터&nbsp;
+                <span class="star-rating smaller">
+                  <% for x in (1..5) do %>
+                    <% if (x == y.computer_point.round(0)) %>
+                      <i class="on"></i>
+                    <% else %>
+                      <i></i>
+                    <% end %>
+                  <% end %>
+                </span></p><br>
+                <b><p>전체 평점</p></b>
+                <span class="star-rating small">
+                  <% for x in (1..5) do %>
+                    <% if (x == y.avg_point.round(0)) %>
+                      <i class="on"></i>
+                    <% else %>
+                      <i></i>
+                    <% end %>
+                  <% end %>
+                </span><span>(<%=y.avg_point%>)</span>
+              </div>
             </div>
           </div>
+          </a>
         </div>
         <%@rank+=1%>
         <%end%>
       </div><br><br>
       
     </div>
-    <div class="col-md-2">
-        
-        <%region.each do |region_code,region_name|%>
-        <p><%=region_name%> 순위</p>
-        <div style="border-bottom: 1px solid #BDBDBD">
-          <%@rank=1%>
-          <%@testcenter.where(:region_code=>region_code).sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
-            <p><%=@rank%>위 : <%=y.name%>(<%=y.avg_point%>점) <a href="/home/labreview/<%=y.id%>">자세히 보기</a></p>
-            
-          <%@rank+=1%>
-          <%end%>
-        </div>
-        <%end%>
-    </div>
+    
+  </div>
   
-  
-  
+<script>
+  $(function() {
+    $(".thumbnail").mouseover(function() {
+      $(this).css("background-color","#f5f4ea");
+    });
+    $(".thumbnail").mouseout(function() {
+      $(this).css("background-color","white");
+    });
+  });
+</script>
   
 <!--각 학교별 페이지인경우-->
 <%else%>
@@ -137,35 +190,67 @@ $('[data-toggle=collapse]').click(function(){
   
   google.maps.event.addDomListener(window, 'load', labMap);
 </script>
-  <div class="col-md-6">
+  <div class="col-md-7" style="margin-left: 40px;">
     <div class="row">
-      <div class="col-md-8">
-        <h2><%=@testcenter.find(params[:id]).name%></h2>
-        <div id="map" style="width:400px; height:300px;"></div>
+      <div class="col-md-7">
+        <%index=@testcenter.find(params[:id]).region_code%>
+        <div>
+          <p style="font-size: 15px;"><b><a href="/home/region_main/<%=@testcenter.find(params[:id]).region_code%>"><%=region[@testcenter.find(params[:id]).region_code]%></a> &nbsp;<i class="glyphicon glyphicon-chevron-right"></i>&nbsp; <span><%=@testcenter.find(params[:id]).name%></span></b></p><br>
+        </div>
+        <div id="map" style="height:300px;"></div>
+      
+      </div><br>
+      <div class="col-md-1" style="margin-top: 30px; height: 300px; border-left:1px solid #BDBDBD;">
       
       </div>
-      <%region.each do |region_code,region_name| %>
-        <%if @testcenter.where(:region_code=>region_code).include? @testcenter.find(params[:id]) %>
-            <div class="col-md-4">
-              <p><%=region_name%> 핫 플레이스</p>
-              <%@ranking=1%>
-              <%@testcenter.where(:region_code => region_code).sort_by{|x| x[:avg_point]}.reverse.take(3).each do |y|%>
-              <a href="/home/labreview/<%y.id%>" style="text-decoration:none; color:black;">
-                <div style="border:1px solid black;height:120px">
-                  <div>
-                    <h4><%=@ranking%>위</h4>
-                    <p><%=y.name%></p>
-                    <p>평점:<%=y.avg_point%></p>
-                  </div>
-                </div>
-              </a>
-              <%@ranking+=1%>
-              <%end%>
-            </div>
-        <%end%> 
-      <%end%>
-    </div>
+      <div class="col-md-4" style="margin-top: 40px; margin-left:-50px; height:280px;">
+        <h3><b><%=@testcenter.find(params[:id]).name%></b></h3><br>
+        <b><p>전체 평점</p></b>
+        <span class="star-rating small">
+          <% for x in (1..5) do %>
+            <% if (x == @testcenter.find(params[:id]).avg_point.round(0)) %>
+              <i class="on"></i>
+            <% else %>
+              <i></i>
+            <% end %>
+          <% end %>
+        </span>&nbsp;<%=@testcenter.find(params[:id]).avg_point%><br><br><br>
+        
+        <p>위치&nbsp;
+        <span class="star-rating smaller">
+          <% for x in (1..5) do %>
+            <% if (x == @testcenter.find(params[:id]).location_point.round(0)) %>
+              <i class="on"></i>
+            <% else %>
+              <i></i>
+            <% end %>
+          <% end %>
+        </span>&nbsp;<%=@testcenter.find(params[:id]).location_point%></p>
+        <p>시설&nbsp;
+        <span class="star-rating smaller">
+          <% for x in (1..5) do %>
+            <% if (x == @testcenter.find(params[:id]).facility_point.round(0)) %>
+              <i class="on"></i>
+            <% else %>
+              <i></i>
+            <% end %>
+          <% end %>
+        </span>&nbsp;<%=@testcenter.find(params[:id]).facility_point%></p>
+        <p>컴퓨터&nbsp;
+        <span class="star-rating smaller">
+          <% for x in (1..5) do %>
+            <% if (x == @testcenter.find(params[:id]).computer_point.round(0)) %>
+              <i class="on"></i>
+            <% else %>
+              <i></i>
+            <% end %>
+          <% end %>
+        </span>&nbsp;<%=@testcenter.find(params[:id]).computer_point%></p><br>
+      </div>
+
+    </div><br><br>
     
+
     <div class="panel panel-default">
         <!-- Table -->
         <table class="table table-striped table-condensed">
@@ -210,9 +295,9 @@ $('[data-toggle=collapse]').click(function(){
             
           </tbody>
         </table>
-      </div>
+      </div><br><br>
       <form action="/home/labreview_write/<%=@testcenter.find(params[:id]).id%>">
-          <button type="submit" class="btn btn-primary">후기 작성</button>
+          <center><button type="submit" class="btn btn-primary">후기 작성</button></center>
       </form>
   </div>
  
