real last commit

--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -45,9 +45,7 @@ $('[data-toggle=collapse]').click(function(){
     <div class="col-md-8" style="margin-left: 20px;">
       
       <div style="text-align:center">
-        <form action="/home/labreview_write">
-          <button type="submit" class="btn btn btn-default btn-lg btn-block">후기 작성</button>
-        </form>
+        <a href="/home/labreview_write" class="myButton" style="width: 98%; height: 45px;">후기 입력</a>
       </div>
     `<br>
       <h3>전국 핫플레이스 TOP8</h3>
@@ -303,3 +301,4 @@ $('[data-toggle=collapse]').click(function(){
  
 </div>
 <%end%>
+
