--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -215,3 +215,48 @@ td {
     vertical-align: middle;
   }
 }
+
+.myButton {
+	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #ebebeb));
+	background:-moz-linear-gradient(top, #f9f9f9 5%, #ebebeb 100%);
+	background:-webkit-linear-gradient(top, #f9f9f9 5%, #ebebeb 100%);
+	background:-o-linear-gradient(top, #f9f9f9 5%, #ebebeb 100%);
+	background:-ms-linear-gradient(top, #f9f9f9 5%, #ebebeb 100%);
+	background:linear-gradient(to bottom, #f9f9f9 5%, #ebebeb 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#ebebeb',GradientType=0);
+	background-color:#f9f9f9;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #f2eff2;
+	display:inline-block;
+	cursor:pointer;
+	color:#a3a3a3;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.myButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ebebeb), color-stop(1, #f9f9f9));
+	background:-moz-linear-gradient(top, #ebebeb 5%, #f9f9f9 100%);
+	background:-webkit-linear-gradient(top, #ebebeb 5%, #f9f9f9 100%);
+	background:-o-linear-gradient(top, #ebebeb 5%, #f9f9f9 100%);
+	background:-ms-linear-gradient(top, #ebebeb 5%, #f9f9f9 100%);
+	background:linear-gradient(to bottom, #ebebeb 5%, #f9f9f9 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ebebeb', endColorstr='#f9f9f9',GradientType=0);
+	background-color:#ebebeb;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+
+
+
