--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,6 +117,9 @@
           </a>
         </div>
       </div>
+      
+      <div class="blank_image">
+      </div>
     </center>
     
   </nav>
