--- a/app/views/home/labreview_write.html.erb
+++ b/app/views/home/labreview_write.html.erb
@@ -138,9 +138,9 @@
     });
   });
   
-  function replaceBR(){  
-   document.cf.c.value = document.cf.c.value.replace( /\n/g, "&#10;");
-   return true;
+  // function replaceBR(){  
+  // document.cf.c.value = document.cf.c.value.replace( /\n/g, '<br/>');
+  // return true;
   
  
 
