--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -57,8 +57,10 @@ $('[data-toggle=collapse]').click(function(){
           <div id="link" class="thumbnail" style="height:200px;">
             <div class="row">
               <div class="col-md-7">
-                <div style="border-right:1px solid #BDBDBD; text-align:center">
-                  <p><strong><%=@rank%>위  <%=y.name%></strong></p>
+                <div style="border-right:1px solid #BDBDBD; text-align:center;">
+                  <div style="width:200px; text-overflow:ellipsis; overflow:hidden; margin-left: auto; margin-right: auto; margin-top: 8px;  margin-bottom: 8px;">
+                    <nobr><strong><%=@rank%>위  <%=y.name%></strong></nobr>
+                  </div>
                   <!--<p><%=y.address%></p>-->
                   <iframe width="98%" height="100%" frameborder="0" style="border:0"
                           src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDxbMZWBxFjGnTiZOMAeSIm6TFR4BvhFUM&q=<%=y.position_lat%>,<%=y.position_lng%>"
@@ -252,13 +254,13 @@ $('[data-toggle=collapse]').click(function(){
     <div class="panel panel-default">
         <!-- Table -->
         <table class="table table-striped table-condensed">
-            <col style="width:10%">
+            <col style="width:5%">
             <col style="width:20%">
             <col style="width:30%">
             <col style="width:15%">
             <col style="width:5%">
             <col style="width:10%">
-            <col style="width:10%">
+            <col style="width:15%">
           <thead>
             <tr>
               <th style="text-align:center">번호</th>  
