--- a/app/views/home/show_review.html.erb
+++ b/app/views/home/show_review.html.erb
@@ -285,7 +285,7 @@
         </center><br><br>
       </div>
       <div class="col-md-4" style="text-align: right;">
-        <a href="/home/modify_review/<%=@article.id%>" style="font-size: 13px;">수정</a>&nbsp;&nbsp;&nbsp;<a href="/home/do_delete/<%=@article.id%>">삭제</a>&nbsp;&nbsp;&nbsp;<a>목록</a>
+        <a href="/home/modify_review/<%=@article.id%>" style="font-size: 13px;">수정</a>&nbsp;&nbsp;&nbsp;<a href="/home/do_delete/<%=@article.id%>">삭제</a>&nbsp;&nbsp;&nbsp;<a href="/home/labreview/<%=@article.test_center_id%>">목록</a>
       </div>
     </div><br>  
     
