remove another hr

--- a/app/views/home/labreview_write.html.erb
+++ b/app/views/home/labreview_write.html.erb
@@ -142,14 +142,12 @@
     $("#after_select").change(function() {
         document.getElementById("final_choice").value= $(this).val();   
     });
+    
+    if(document.getElementsByClassName("location_selected") != )
+    document.getElementsByClassName("example");
     $(".location_selected").change(function() {
         alert("1입니다");  
     });
-    
-    
-    
-    
-    
     
   });
   
