--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -105,7 +105,7 @@ $('[data-toggle=collapse]').click(function(){
                       <i></i>
                     <% end %>
                   <% end %>
-                </span><span>(<%=y.avg_point%>)</span>
+                </span><span>&nbsp;(<%=y.avg_point%>)</span>
               </div>
             </div>
           </div>
