--- a/app/views/home/labreview_write.html.erb
+++ b/app/views/home/labreview_write.html.erb
@@ -115,6 +115,7 @@
 
 <script>
   $(function() {
+    while()
     $("#select_region").change(function() {
         var code = $(this).val();
         if(code=="01"){
@@ -143,9 +144,8 @@
         document.getElementById("final_choice").value= $(this).val();   
     });
     
-    if(document.getElementsByClassName("location_selected") != )
-    document.getElementsByClassName("example");
-    $(".location_selected").change(function() {
+    
+  $(".location_selected").change(function() {
         alert("1입니다");  
     });
     
